--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<input class="form-control bg-secondary fs-1" placeholder="0" id="res" readonly>
 			</div>
 		</div>
-		<div class="row py-1">
+		<div class="row py-1 gx-1">
 			<div class="col-lg-2 col-md-2 col-2">
 				<button class="btn btn-success w-100"  onclick="botones('b1')">1</button>
 			</div>
@@ -35,7 +35,7 @@
 				<button class="btn btn-outline-warning w-100" onclick="botones('addition')">+</button>
 			</div>
 		</div>
-		<div class="row py-1 ">
+		<div class="row py-1 gx-1">
 			<div class="col-lg-2 col-md-2 col-2">
 				<button class="btn btn-success w-100" onclick="botones('b5')">5</button>
 			</div>
@@ -52,7 +52,7 @@
 				<button class="btn btn-outline-warning w-100" onclick="botones('subtraction')">-</button>
 			</div>
 		</div>
-		<div class="row py-1">
+		<div class="row py-1 gx-1">
 			<div class="col-lg-2 col-md-2 col-2">
 				<button class="btn btn-success w-100" onclick="botones('b9')">9</button>
 			</div>
@@ -66,7 +66,7 @@
 				<button class="btn btn-outline-warning w-100" id="product" onclick="botones('product')">*</button>
 			</div>
 		</div>
-		<div class="row py-1">
+		<div class="row py-1 gx-1">
 			<div class="col-lg-4 col-md-4 col-4">
 				<button class="btn btn-success w-100" id="equal" onclick="botones('equal')">=</button>
 			</div>
