--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 		</div>	
 	</div>
 	<div class="text-center text-light">
-		<label class="fw-light">Todos los derechos reservados <a href="" class="text-warning">Cristhian Villanueva</a></label>
+		<label class="fw-light small">Todos los derechos reservados <a href="" class="text-warning">Cristhian Villanueva</a></label>
 	</div>	
 </body>
 </html>
